--- a/sign.css
+++ b/sign.css
@@ -358,7 +358,8 @@ body {
 }
 
 .heading {
-    font-size: 50px;
+    font-size: 64px;
+    font-weight: 500;
     color: #2e7d32;
     margin-bottom: 20px;
 }
