--- a/navbar.css
+++ b/navbar.css
@@ -9,7 +9,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-    background-color: #c5e1a5;
+    background-color: #B8FFB8;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
 }
