--- a/AboutUs.css
+++ b/AboutUs.css
@@ -111,10 +111,20 @@ h1, h2 {
 .team-member p {
     color: #333;
     font-size: 0.9rem;
-    padding: 110px;
-    padding-left: 0px;
+    padding: 0.3125rem 0.625rem 0.625rem;
     transition: color 0.3s ease;
+    word-break: break-word;
 }
+
+.team-member p a {
+    color: inherit;
+    text-decoration: none;
+}
+.team-member p a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+
 
 #team {
     background-color: #C8E6C9;
@@ -155,7 +165,6 @@ footer {
 
 .theme-toggle:hover {
     transform: rotate(45deg);
-
 }
 
 .theme-toggle img {
@@ -174,11 +183,11 @@ body.dark-mode header {
     background-color: #1e1e1e;
 }
 
-#team h2.dark-mode{
+#team h2.dark-mode {
     color: #2ecc71;
 }
 
-body.dark-mode h1, 
+body.dark-mode h1,
 body.dark-mode h2 {
     color: #2ecc71;
 }
