--- a/sign.css
+++ b/sign.css
@@ -442,3 +442,35 @@ body {
         display: none;
     }
 }
+.social-login button {
+    width: 1rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    border: none;
+    background: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  
+  
+  #google-sign-in-btn img{
+    width: 1.875rem;
+    transform: translateY(9px);
+  }
+  
+  .separator {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 1.25rem 0;
+    color: #000000;
+  }
+  
+  .separator::before,
+  .separator::after {
+    content: '';
+    flex: 1;
+    border-bottom: 0.0625rem solid #ddd;
+  }
